@@ -117,6 +117,9 @@ To translate:
       'Reactivate' => 'Reactivate',
       'Subelement' => 'Subelement',
       'All Subelements' => 'All Subelements',
+      'Code' => 'Code',
+      'Code Select' => 'Code Select',
+      'Invalid codeselect code (didn't return an array ref of even size)' => 'Invalid codeselect code (didn't return an array ref of even size)',
 
   );
 
